rbx_binary/src/weak/tests/snapshots/rbx_binary__weak__tests__util__three-brickcolorvalues__decoded.snap
---
source: rbx_binary/src/weak/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: Value
  class: BrickColorValue
  properties:
    Attributes:
      Attributes: {}
    Tags:
      Tags: []
    Value:
      BrickColor: 1004
  children: []
- referent: referent-1
  name: Value
  class: BrickColorValue
  properties:
    Attributes:
      Attributes: {}
    Tags:
      Tags: []
    Value:
      BrickColor: 37
  children: []
- referent: referent-2
  name: Value
  class: BrickColorValue
  properties:
    Attributes:
      Attributes: {}
    Tags:
      Tags: []
    Value:
      BrickColor: 1010
  children: []
